--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-<<<<<<< HEAD
-		<version>3.1.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.avn2</groupId>
-	<artifactId>estoque_cogumelos</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>estoque_cogumelos</name>
-	<description>Controle de estoque e envio de cogumelos</description>
-=======
 		<version>2.7.17</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.servidor</groupId>
-	<artifactId>servidor_java</artifactId>
+	<groupId>com.trab</groupId>
+	<artifactId>controle_de_estoque_micelico</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>servidor_java</name>
+	<name>controle_de_estoque_micelico</name>
 	<description>Demo project for Spring Boot</description>
->>>>>>> fc2bbae3fa24c844f1401cd15bbd2c54d3f9f4b7
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -34,20 +23,24 @@
 		</dependency>
 
 		<dependency>
-<<<<<<< HEAD
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-=======
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
->>>>>>> fc2bbae3fa24c844f1401cd15bbd2c54d3f9f4b7
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -56,7 +49,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-<<<<<<< HEAD
 				<configuration>
 					<image>
 						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
@@ -68,8 +60,6 @@
 						</exclude>
 					</excludes>
 				</configuration>
-=======
->>>>>>> fc2bbae3fa24c844f1401cd15bbd2c54d3f9f4b7
 			</plugin>
 		</plugins>
 	</build>
